--- a/mystyle.sty
+++ b/mystyle.sty
@@ -117,6 +117,7 @@
 \newcommand{\Pair}{\catname{Pair}}
 \newcommand{\Mod}{\catname{Mod}}
 \newcommand{\SSet}{\catname{Set}_{\D}}
+\newcommand{\SSSet}{\catname{Set}_{\D^{2}}}
 \newcommand{\Kan}{\catname{Kan}}
 \newcommand{\SCat}{\catname{Cat}_{\D}}
 \newcommand{\ICat}{\catname{Cat}_{\infty}}
