--- a/sources.bib
+++ b/sources.bib
@@ -51,5 +51,16 @@
   Title  = {Notes on Higher Categories},
 }
 
+@Article{Joyal2006,
+  author      = {Andre Joyal and Myles Tierney},
+  date        = {2006-07-31},
+  title       = {Quasi-categories vs Segal spaces},
+  eprint      = {math/0607820v2},
+  eprintclass = {math.AT},
+  eprinttype  = {arXiv},
+  abstract    = {We show that complete Segal spaces and Segal categories are Quillen equivalent to quasi-categories.},
+  file        = {:http\://arxiv.org/pdf/math/0607820v2:PDF},
+  keywords    = {math.AT, 55U35;18G30;18G55},
+}
 
 @Comment{jabref-meta: databaseType:biblatex;}
