--- a/segal_spans.tex
+++ b/segal_spans.tex
@@ -2,10 +2,173 @@
 
 \begin{document}
 
+\section{Marked bisimplicial sets}
+\label{sec:marked_bisimplicial_sets}
+
+We need a basic theory of marked bisimplicial sets. This is a very ugly formulation of something that's probably equivalent to something pretty. However, in the case we're interested, it's good enough.
+
+\begin{definition}
+  A \defn{marked bisimplicial set} is a bisimplicial set $X$ together with a marking on $i_{1}^{*}X$. We interpret this as a subset of $X_{10}$.
+\end{definition}
+
+\begin{definition}
+  For a marked simplicial set $A$ and a marked bisimplicial set $B$, define a marking on the bisimplicial set $A \square B$ as follows: a simplex $(a, b) \in A_{1} \times B_{0}$ is marked if and only if $a$ is marked.
+\end{definition}
+
+\begin{definition}
+  Let $A$ denote a marked simplicial set, $B$ an unmarked simplicial set, and $X$ a marked bisimplicial set.
+  \begin{itemize}
+    \item Define an unmarked simplicial set $(A \backslash X)'$ by the universal property
+      \begin{equation*}
+        \Hom_{\SSet}(B, (A \backslash X)) = \Hom_{\SSSet^{+}}(A \square B, X).
+      \end{equation*}
+
+    \item Define a marking on the simplicial set $X / B$ as follows: a 1-simplex $\Delta^{1} \to X / B$ is marked if and only if the corresponding map $\Delta^{1} \square B \to X$ of unmarked bisimplicial sets comes from a map of marked bisimplicial sets $(\Delta^{1})^{\sharp} \square B \to X$.
+  \end{itemize}
+\end{definition}
+
+I still have to check with a fine-toothed comb that we have adjunctions
+\begin{equation*}
+  A \square - : \SSet \longleftrightarrow \SSSet : A \backslash -
+\end{equation*}
+and
+\begin{equation*}
+  - \square B : \SSet^{+} \longleftrightarrow \SSSet^{+} : - / B,
+\end{equation*}
+but I've sketched a proof.
+
+Let $\category{C}$ be an $\infty$-category, and let $\Gamma(\category{C})$ be the complete Segal space
+\begin{equation*}
+  \Gamma(\category{C})_{n} \cong \Map(\Delta^{n}, \category{C})^{\simeq}.
+\end{equation*}
+Clearly, a marking on $\category{C}$ gives a marking on $\Gamma(\category{C})$.
+
+\begin{lemma}
+  Let $\category{C}$ be a quasicategory with a marking, and let $A$ be a marked simplicial set. There is an isomorphism of simplicial sets
+  \begin{equation*}
+    A \backslash \Gamma(\category{C}) \cong \Map^{+}(A, \category{C})^{\simeq},
+  \end{equation*}
+  where $\Map^{+}$ denotes the full subcategory of maps of marked simplicial sets. This isomorphism is natural in $A$. Furthermore, if the marking on $\category{C}$ contains all equivalences and is closed under composition, then the inclusion
+  \begin{equation*}
+    A \backslash \Gamma(\category{C}) \cong \Map^{+}(A, \category{C})^{\simeq} \subseteq \Map(A, \category{C})^{\simeq} \cong A^{\flat}  \backslash \Gamma(\category{C})
+  \end{equation*}
+  is a full subcategory inclusion of connected components.
+\end{lemma}
+
+\begin{corollary}
+  Let $\category{C} \to \category{D}$ be a morphism of marked $\infty$-categories each of whose markings is closed under composition. Suppose that the underlying unmarked morphism $f\colon \Gamma(\category{C}) \to \Gamma(\category{D})$ is a Reedy fibration. Let $u\colon A \to B$ be a morphism of marked simplicial sets whose underlying morphism is a monomorphism. Then the map $\langle u \backslash f \rangle$ is a Kan fibration.
+\end{corollary}
+
+
+\begin{definition}
+  For $n \geq 1$, define the following simplicial subsets of $\Delta^{n}$.
+
+  \begin{itemize}
+    \item Denote by $I_{n}$ the \defn{spine} of $\Delta^{n}$, i.e.\ the space
+      \begin{equation*}
+        \Delta^{\{0, 1\}} \amalg_{\Delta^{\{1\}}} \Delta^{\{1, 2\}} \amalg_{\Delta^{\{2\}}} \cdots \amalg_{\Delta^{\{n-1\}}} \Delta^{\{n-1, n\}}.
+      \end{equation*}
+
+    \item Denote by $\Sigma_{n}$ the space
+      \begin{equation*}
+        \Sigma_{n} = \Delta^{\{0, 1\}} \amalg_{\Delta^{\{0\}}} I_{\{0, \hat{1}, 2, \ldots, n\}}.
+      \end{equation*}
+      That is, $\Sigma_{n}$ is the union of $\Delta^{\{0, 1\}}$ with the spine of $d_{1}\Delta^{n}$.
+
+      We will call $\Sigma_{n}$ the \defn{left spine} of $\Delta^{n}$.
+  \end{itemize}
+\end{definition}
+
+Note that $\Sigma_{2} \simeq \Lambda^{2}_{0}$.
+
+\begin{definition}
+  Let $f\colon X \to Y$ be a Reedy fibration between complete Segal spaces. A morphism $e \in X_{10}$ is \defn{$f$-cocartesian} if the square
+  \begin{equation*}
+    \begin{tikzcd}
+      \Delta^{2} \backslash X \times_{\Delta^{\{0, 1\}} \backslash X} \{e\}
+      \arrow[r]
+      \arrow[d]
+      & \Lambda^{2}_{0} \backslash X \times_{\Delta^{\{0, 1\}} \backslash X} \{e\}
+      \arrow[d]
+      \\
+      \Delta^{2} \backslash Y \times_{\Delta^{\{0, 1\}} \backslash Y} \{fe\}
+      \arrow[r]
+      & \Lambda^{2}_{0} \backslash Y \times_{\Delta^{\{0, 1\}} \backslash Y} \{fe\}
+    \end{tikzcd}
+  \end{equation*}
+  is homotopy pullback.
+\end{definition}
+
+\begin{lemma}
+  Let $f\colon X \to Y$ be a Reedy fibration between Segal spaces, and let $e \in X_{10}$ be a morphism with the property that the square
+  \begin{equation*}
+    \begin{tikzcd}
+      \Delta^{2} \backslash X \times_{\Delta^{\{0, 1\}} \backslash X} \{e\}
+      \arrow[r]
+      \arrow[d]
+      & \Lambda^{2}_{0} \backslash X \times_{\Delta^{\{0, 1\}} \backslash X} \{e\}
+      \arrow[d]
+      \\
+      \Delta^{2} \backslash Y \times_{\Delta^{\{0, 1\}} \backslash Y} \{fe\}
+      \arrow[r]
+      & \Lambda^{2}_{0} \backslash Y \times_{\Delta^{\{0, 1\}} \backslash Y} \{fe\}
+    \end{tikzcd}
+  \end{equation*}
+  is homotopy pullback. Then the square
+  \begin{equation*}
+    \begin{tikzcd}
+      \Delta^{n} \backslash X \times_{\Delta^{\{0, 1\}} \backslash X} \{e\}
+      \arrow[r]
+      \arrow[d]
+      & \Sigma_{n} \backslash X \times_{\Delta^{\{0, 1\}} \backslash X} \{e\}
+      \arrow[d]
+      \\
+      \Delta^{n} \backslash Y \times_{\Delta^{\{0, 1\}} \backslash Y} \{fe\}
+      \arrow[r]
+      & \Sigma_{n} \backslash Y \times_{\Delta^{\{0, 1\}} \backslash Y} \{fe\}
+    \end{tikzcd}
+  \end{equation*}
+  is homotopy pullback for all $n \geq 2$.
+\end{lemma}
+
+For any simplicial subset $A \subseteq \Delta^{n}$, denote the marking where the only marked nondegenerate edge is $\Delta^{\{0, 1\}}$ by $A^{\mathcal{L}}$.
+
+We will say a collection of morphisms $\mathcal{A} \subset \mathrm{Mor}(\SSet^{+})$ has the \emph{right cancellation property} if for all $u$, $v \in \mathrm{Mor}(\SSet^{+})$,
+\begin{equation*}
+  u \in \mathcal{A},\quad vu \in \mathcal{A} \quad \implies \quad v \in A.
+\end{equation*}
+
+\begin{lemma}
+  Let $\mathcal{A}$ be a saturated set of morphisms of $\SSet^{+}$ all of whose underlying morphisms are monomorphisms, and which has the right cancellation property. Further suppose that $\mathcal{A}$ contains the following classes of morphisms.
+  \begin{enumerate}
+    \item Spine inclusions $(I_{n})^{\flat} \hookrightarrow (\Delta^{n})^{\flat}$, $n \geq 2$.
+
+    \item Left spine inclusions $(\Sigma_{n})^{\mathcal{L}} \hookrightarrow (\Delta^{n})^{\mathcal{L}}$, $n \geq 2$.
+  \end{enumerate}
+
+  Then $\mathcal{A}$ contains the following classes of morphisms.
+  \begin{enumerate}
+    \item[1'.] Inner horn inclusions $(\Lambda^{n}_{i})^{\flat} \hookrightarrow (\Delta^{n})^{\flat}$, $n \geq 2$, $0 < i < n$.
+
+    \item[2'.] Left horn inclusions $(\Lambda^{n}_{0})^{\mathcal{L}} \hookrightarrow (\Delta^{n})^{\mathcal{L}}$, $n \geq 2$.
+  \end{enumerate}
+\end{lemma}
+\begin{proof}
+  It is shown in \cite{Joyal2006} that 1.\ $\implies$ 1'. It suffices
+\end{proof}
+
+
+\begin{theorem}
+  Let $f\colon X \to Y$ be a Reedy fibration between complete Segal spaces such that over each morphism $\bar{e} \in Y_{10}$ there exists a cocartesian lift $e \in X_{10}$, i.e.\ a cocartesian morphism $e \in X_{10}$ such that $fe = \bar{e}$. Then the map $i_{1}^{*}X \to i_{1}^{*}Y$ is a cocartesian fibration of quasicategories.
+\end{theorem}
+\begin{proof}
+  It suffices to show that if a morphism in $X_{10}$ is $f$-cocartesian, then it is $i^{*}_{1}f$-cocartesian. To see this, note that
+\end{proof}
+
 \section{Basics of fibrations complete Segal spaces}
 
 \begin{itemize}
-  \item The inclusion of Kan complexes into quasicategories has right adjoint $(-)^{\simeq}$, which sends a simplicial set to the largest kan complex it contains.
+  \item The inclusion of Kan complexes into quasicategories has right adjoint $(-)^{\simeq}$, which sends a simplicial set to the largest kan complex it contains. sets.
 
   \item There is a Quillen equivalence
     \begin{equation*}
@@ -307,15 +470,15 @@ Just as in the marked case, we will a set of bimarked anodyne morphisms, the mor
   where the first inclusion is of the form (2') and the second is a pushout of a morphism of the form (2). We can draw this process as follows.
   \begin{equation*}
     \begin{tikzcd}
-      \ 
+      \
       \\
-      \ 
+      \
       \\
       00
     \end{tikzcd}
     \qquad\hookrightarrow\qquad
     \begin{tikzcd}
-      & \ 
+      & \
       \\
       & 01
       \arrow[dl, "\circ" marking]
@@ -630,7 +793,7 @@ are $p$-cocartesian.
   are homotopy pullback. But it is easy to see that these are of the form of the square in \hyperref[proposition:bimarked_anodyne_homotopy_pullback]{Proposition~\ref*{proposition:bimarked_anodyne_homotopy_pullback}}; the first has $X \to Y = \asd(\Delta^{\{0, 2\}})^{\heartsuit} \to \asd(\Delta^{2})^{\heartsuit}$, which we saw in \hyperref[eg:bimarking_on_asd_delta2]{Example~\ref*{eg:bimarking_on_asd_delta2}} was bimarked anodyne, and the second has $X \to Y = \asd(\Delta^{\{0\}})^{\heartsuit} \to \asd(\Delta^{\{0, 1\}})^{\heartsuit}$, which we saw in \hyperref[eg:bimarking_on_asd_delta1]{Example~\ref*{eg:bimarking_on_asd_delta1}} was bimarked anodyne. Both are therefore homotopy pullback.
 \end{proof}
 
-Thus we have shown that if a morphism has the form of \hyperref[eq:form_of_p_cocartesian_morphisms]{Equation~\ref*{eq:form_of_p_cocartesian_morphisms}}, it is $p$-cocartesian. It remains to show the reverse implication. 
+Thus we have shown that if a morphism has the form of \hyperref[eq:form_of_p_cocartesian_morphisms]{Equation~\ref*{eq:form_of_p_cocartesian_morphisms}}, it is $p$-cocartesian. It remains to show the reverse implication.
 
 First note that since $\asd(\Delta^{0})^{\heartsuit} \to \asd(\Delta^{1})^{\heartsuit}$ is bimarked anodyne, every morphism has a lift of the form \hyperref[eq:form_of_p_cocartesian_morphisms]{Equation~\ref*{eq:form_of_p_cocartesian_morphisms}}, which we have just shown is $p$-cocartesian. Since any two $p$-cocartesian lifts are equivalent, any morphism which is a $p$-cocartesian lift is equivalent to such a morphism, and hence must be of that form.
 
